fix the bug: background does not fit the div
with: background-size: 100% 100%;

--- a/css/styles_eng.css
+++ b/css/styles_eng.css
@@ -126,6 +126,7 @@ h1 {
     width: 100%;
     height: 500px;
     padding: 50px;
+    background-size: 100% 100%;
 }
 .galary > div {
     width: 30%;
